# voice-agent-pipecat

./: .gitignore  README.md  run.sh  stop.sh
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/app/controller/: __init__.py  api.py
backend/app/helpers/: __init__.py  audio.py  config.py
backend/app/service/: agno_chat.py  runtime_services.py  voice_pipeline.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.ts  style.css  types.ts
frontend/src/components/: agent-section.tsx  app-header.tsx  control-panel.tsx  conversation-panel.tsx  dashboard-strip.tsx  message-bubble.tsx  mode-selector.tsx  stack-selector.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/hooks/: use-push-to-talk.ts  use-voice-agent.ts  use-voice-socket.ts
