[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.6.20",
    "fastapi[standard]>=0.138.1",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "onnxruntime<1.18",
    "openai>=2.28.0",
    "pipecat-ai[webrtc,websocket]>=0.0.31",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "supertonic>=1.2.2",
    "uvicorn>=0.49.0",
]
